haciendo varios ajsutes para crear un usuario nuevo con filtro de selecicon desde el backend