@@ -12,14 +12,13 @@ import org.springframework.web.bind.annotation.*;
 import styp.com.cenate.dto.*;
 import styp.com.cenate.service.auth.AuthenticationService;
 import styp.com.cenate.service.auditlog.AuditLogService;
+import styp.com.cenate.repository.UsuarioRepository;
 
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.Map;
+import java.util.*;
 
 /**
- * 🌐 Controlador para autenticación, registro y gestión de contraseñas.
- * Totalmente auditado y con manejo de errores profesional.
+ * 🌐 Controlador para autenticación, solicitudes de cuenta y gestión de contraseñas.
+ * Todo el flujo está auditado y preparado para entorno institucional.
  */
 @RestController
 @RequestMapping("/api/auth")
@@ -36,6 +35,7 @@ public class AuthController {
 
     private final AuthenticationService authenticationService;
     private final AuditLogService auditLogService;
+    private final UsuarioRepository usuarioRepository;
 
     // ======================================================
     // ✅ LOGIN
@@ -48,64 +48,43 @@ public class AuthController {
 
             if (response == null) {
                 log.warn("⚠️ Login fallido (respuesta nula) para usuario {}", request.getUsername());
-                auditLogService.registrarError("LOGIN_FAILED", "AUTH",
-                        "Login fallido: respuesta nula", httpRequest);
+                auditLogService.registrarError("LOGIN_FAILED", "AUTH", "Login fallido: respuesta nula", httpRequest);
                 return ResponseEntity.status(HttpStatus.UNAUTHORIZED)
-                        .body(Collections.singletonMap("message", "Credenciales inválidas"));
+                        .body(Map.of("message", "Credenciales inválidas o cuenta pendiente de aprobación."));
             }
 
-            // Auditando información de acceso
             auditLogService.registrarLogin(request.getUsername(), httpRequest);
             return ResponseEntity.ok(response);
 
         } catch (BadCredentialsException e) {
             log.warn("🚫 Credenciales incorrectas para usuario: {}", request.getUsername());
-            auditLogService.registrarError("LOGIN_FAILED", "AUTH",
-                    "Credenciales incorrectas", httpRequest);
+            auditLogService.registrarError("LOGIN_FAILED", "AUTH", "Credenciales incorrectas", httpRequest);
             return ResponseEntity.status(HttpStatus.UNAUTHORIZED)
-                    .body(Collections.singletonMap("message", "Usuario o contraseña incorrectos"));
+                    .body(Map.of("message", "Usuario o contraseña incorrectos."));
 
         } catch (RuntimeException e) {
             log.warn("⚠️ Error controlado en login: {}", e.getMessage());
-            auditLogService.registrarError("LOGIN_ERROR", "AUTH",
-                    "Error controlado: " + e.getMessage(), httpRequest);
+            auditLogService.registrarError("LOGIN_ERROR", "AUTH", e.getMessage(), httpRequest);
             return ResponseEntity.status(HttpStatus.BAD_REQUEST)
-                    .body(Collections.singletonMap("message", e.getMessage()));
+                    .body(Map.of("message", e.getMessage()));
 
         } catch (Exception e) {
             log.error("💥 Error inesperado en login de {}: {}", request.getUsername(), e.getMessage(), e);
-            auditLogService.registrarError("LOGIN_ERROR", "AUTH",
-                    "Error inesperado: " + e.getMessage(), httpRequest);
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-                    .body(Collections.singletonMap("message", "Error interno del servidor"));
+            auditLogService.registrarError("LOGIN_ERROR", "AUTH", e.getMessage(), httpRequest);
+            return ResponseEntity.internalServerError()
+                    .body(Map.of("message", "Error interno del servidor"));
         }
     }
 
     // ======================================================
-    // ✅ REGISTRO DE USUARIO
+    // 🚫 REGISTRO DIRECTO DESHABILITADO
     // ======================================================
     @PostMapping("/register")
-    public ResponseEntity<?> register(@Valid @RequestBody UsuarioCreateRequest request, HttpServletRequest httpRequest) {
-        try {
-            log.info("🧍 Registro de nuevo usuario: {}", request.getUsername());
-            UsuarioResponse response = authenticationService.createUser(request);
-
-            auditLogService.registrarAccion("REGISTER", "AUTH",
-                    "Nuevo usuario registrado: " + request.getUsername(), "INFO", httpRequest);
-
-            return ResponseEntity.status(HttpStatus.CREATED)
-                    .body(Map.of("message", "Usuario registrado exitosamente", "data", response));
-        } catch (RuntimeException e) {
-            log.warn("❌ Error en registro de usuario {}: {}", request.getUsername(), e.getMessage());
-            auditLogService.registrarError("REGISTER_FAILED", "AUTH",
-                    "Error en registro: " + e.getMessage(), httpRequest);
-            return ResponseEntity.status(HttpStatus.BAD_REQUEST)
-                    .body(Collections.singletonMap("message", e.getMessage()));
-        } catch (Exception e) {
-            log.error("💥 Error inesperado al registrar usuario: {}", e.getMessage(), e);
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-                    .body(Collections.singletonMap("message", "Error interno del servidor"));
-        }
+    public ResponseEntity<?> registerDisabled() {
+        return ResponseEntity.status(HttpStatus.FORBIDDEN)
+                .body(Map.of("message",
+                        "El registro directo está deshabilitado. " +
+                                "Debe solicitar la creación de cuenta al área administrativa o al SUPERADMIN."));
     }
 
     // ======================================================
@@ -119,13 +98,12 @@ public class AuthController {
     ) {
         try {
             if (authentication == null || !authentication.isAuthenticated()) {
-                log.warn("🚫 Intento de cambio de contraseña sin autenticación válida");
                 return ResponseEntity.status(HttpStatus.UNAUTHORIZED)
-                        .body(Collections.singletonMap("message", "Token inválido o expirado"));
+                        .body(Map.of("message", "Token inválido o expirado"));
             }
 
             String username = authentication.getName();
-            log.info("🧩 Cambio de contraseña solicitado por: {}", username);
+            log.info("🔄 Cambio de contraseña solicitado por: {}", username);
 
             authenticationService.changePassword(
                     username,
@@ -134,24 +112,67 @@ public class AuthController {
                     request.getConfirmPassword()
             );
 
-            auditLogService.registrarAccion("CHANGE_PASSWORD", "AUTH",
-                    "Cambio de contraseña exitoso", "INFO", httpRequest);
-
-            return ResponseEntity.ok(Collections.singletonMap("message", "Contraseña actualizada exitosamente"));
+            auditLogService.registrarAccion("CHANGE_PASSWORD", "AUTH", "Cambio de contraseña exitoso", "INFO", httpRequest);
+            return ResponseEntity.ok(Map.of("message", "Contraseña actualizada exitosamente."));
 
         } catch (RuntimeException e) {
-            log.warn("⚠️ Error controlado al cambiar contraseña: {}", e.getMessage());
-            auditLogService.registrarError("CHANGE_PASSWORD_FAILED", "AUTH",
-                    e.getMessage(), httpRequest);
-            return ResponseEntity.status(HttpStatus.BAD_REQUEST)
-                    .body(Collections.singletonMap("message", e.getMessage()));
+            auditLogService.registrarError("CHANGE_PASSWORD_FAILED", "AUTH", e.getMessage(), httpRequest);
+            return ResponseEntity.badRequest().body(Map.of("message", e.getMessage()));
 
         } catch (Exception e) {
             log.error("💥 Error inesperado al cambiar contraseña: {}", e.getMessage(), e);
-            auditLogService.registrarError("CHANGE_PASSWORD_ERROR", "AUTH",
-                    "Error inesperado: " + e.getMessage(), httpRequest);
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-                    .body(Collections.singletonMap("message", "Error interno del servidor"));
+            return ResponseEntity.internalServerError()
+                    .body(Map.of("message", "Error interno del servidor"));
+        }
+    }
+
+    // ======================================================
+    // ✅ RECUPERACIÓN DE CONTRASEÑA (simulada)
+    // ======================================================
+    @PostMapping("/forgot-password")
+    public ResponseEntity<?> forgotPassword(@RequestBody Map<String, String> request) {
+        String email = request.get("email");
+        if (email == null || email.isBlank()) {
+            return ResponseEntity.badRequest().body(Map.of("message", "El correo electrónico es obligatorio."));
+        }
+
+        log.info("📩 Solicitud de recuperación de contraseña para: {}", email);
+        // 🔸 Aquí se puede agregar en el futuro un MailService real
+        return ResponseEntity.ok(Map.of("message", "Se ha enviado un enlace de recuperación (simulado) al correo: " + email));
+    }
+
+    // ======================================================
+    // ✅ PERFIL DEL USUARIO AUTENTICADO
+    // ======================================================
+    @GetMapping("/me")
+    public ResponseEntity<?> getCurrentUser(Authentication authentication) {
+        try {
+            if (authentication == null || !authentication.isAuthenticated()) {
+                return ResponseEntity.status(HttpStatus.UNAUTHORIZED)
+                        .body(Map.of("message", "No hay un usuario autenticado"));
+            }
+
+            String username = authentication.getName();
+            log.info("🔎 Consultando perfil del usuario autenticado: {}", username);
+
+            var usuario = usuarioRepository.findByNameUser(username)
+                    .orElseThrow(() -> new RuntimeException("Usuario no encontrado"));
+
+            Map<String, Object> response = new HashMap<>();
+            response.put("idUser", usuario.getIdUser());
+            response.put("username", usuario.getNameUser());
+            response.put("estado", usuario.getStatUser());
+            response.put("roles", usuario.getRoles().stream().map(r -> r.getDescRol()).toList());
+            response.put("permisos", usuario.getRoles().stream()
+                    .flatMap(r -> r.getPermisos().stream().map(p -> p.getDescPermiso()))
+                    .collect(java.util.stream.Collectors.toSet()));
+
+            return ResponseEntity.ok(response);
+
+        } catch (Exception e) {
+            log.error("💥 Error al obtener el usuario autenticado: {}", e.getMessage(), e);
+            return ResponseEntity.internalServerError()
+                    .body(Map.of("message", "Error interno del servidor"));
         }
     }
 
@@ -160,25 +181,17 @@ public class AuthController {
     // ======================================================
     @PostMapping("/logout")
     public ResponseEntity<?> logout(Authentication authentication, HttpServletRequest httpRequest) {
-        try {
-            String username = authentication != null ? authentication.getName() : "UNKNOWN";
-            log.info("👋 Logout de usuario: {}", username);
-            auditLogService.registrarLogout(username, httpRequest);
-            return ResponseEntity.ok(Collections.singletonMap("message", "Logout exitoso"));
-        } catch (Exception e) {
-            log.error("⚠️ Error en logout: {}", e.getMessage());
-            return ResponseEntity.ok(Collections.singletonMap("message", "Logout procesado con advertencia"));
-        }
+        String username = (authentication != null) ? authentication.getName() : "UNKNOWN";
+        log.info("👋 Logout de usuario: {}", username);
+        auditLogService.registrarLogout(username, httpRequest);
+        return ResponseEntity.ok(Map.of("message", "Logout exitoso."));
     }
 
     // ======================================================
-    // ✅ SALUD DEL SERVICIO
+    // ✅ HEALTHCHECK
     // ======================================================
     @GetMapping("/health")
     public ResponseEntity<?> health() {
-        Map<String, String> response = new HashMap<>();
-        response.put("status", "OK");
-        response.put("service", "Authentication Service");
-        return ResponseEntity.ok(response);
+        return ResponseEntity.ok(Map.of("status", "OK", "service", "Authentication Service"));
     }
 }
